# hw_git_10_1

./: .gitignore  README.md  pyproject.toml
src/: main.py  masks.py  some_test.py  widget.py
